--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
 		<meta name="theme-color" content="#ffffff">
 		<!-- end favicon links -->
 		
-		<!--Estilo General-->
+		<!--Estilo General
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		-->
 		
