--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -80,6 +80,10 @@
     <!-- /Google Analytics -->   
     
     	<link href='http://fonts.googleapis.com/css?family=Freckle+Face' rel='stylesheet' type='text/css'>
+	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
     	
     	<style class="cp-pen-styles">  
         body{
@@ -109,7 +113,7 @@
         }
         
         .title{
-          font-family: 'Freckle Face', cursive;
+          font-family: 'UnifrakturMaguntia', cursive;
           text-align:center;
           color: #78634c;
           -webkit-animation: title 10s 1 ease-in-out;
