--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -83,7 +83,7 @@
 	
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=UnifrakturMaguntia&display=swap" rel="stylesheet">
     	
     	<style class="cp-pen-styles">  
         body{
@@ -113,7 +113,7 @@
         }
         
         .title{
-          font-family: 'UnifrakturMaguntia', cursive;
+          font-family: 'Marck Scrip', cursive;
           text-align:center;
           color: #78634c;
           -webkit-animation: title 10s 1 ease-in-out;
