--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -113,7 +113,7 @@
         }
         
         .title{
-          font-family: 'Marck Scrip', cursive;
+          font-family: 'Marck Script', cursive;
           text-align:center;
           color: #78634c;
           -webkit-animation: title 10s 1 ease-in-out;
