--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -119,7 +119,9 @@
           -webkit-animation: title 10s 1 ease-in-out;
         }
         h1.title{
-          font-size:3em;
+          font-family: 'UnifrakturMaguntia', cursive;
+	  font-size:3em;
+	  text-transform: uppercase;
         }
         @-webkit-keyframes title{
           0%{color: #d6c3ac;}
