--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -116,7 +116,7 @@
           font-family: 'Marck Script', cursive;
           text-align:center;
           color: #78634c;
-	  margin-top:10px;
+	  margin:5px;
           -webkit-animation: title 10s 1 ease-in-out;
         }
         h1.title{
