--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -110,6 +110,9 @@
           .svg{
              height:250px;
           }
+	  h1.title{
+	  	font-size:2em;
+	  }
         }
         
         .title{
