--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -68,7 +68,7 @@
 		<!-- Google Analytics -->    
 		<script type="text/javascript">
 			  var _gaq = _gaq || [];
-			  _gaq.push(['_setAccount', 'UA-XXXXX-X']);
+			  _gaq.push(['_setAccount', 'UA-309423510']);
 			  _gaq.push(['_trackPageview']);
 
 			  (function() {
