--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1666,7 +1666,7 @@
   </g>	
 </svg>
 <h1 class="title">Ares Enyalius</h1>
-<h3 class="title">Próximamente, tu website de historia en aresenyalius.es</h3>
+<h3 class="title">Muy pronto, tu website de historia en aresenyalius.es</h3>
 
 <script src='js/stopExecutionOnTimeout.js'></script>
 <script src='js/prefixfree.min.js'></script>
