--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1667,6 +1667,7 @@
 </svg>
 <h1 class="title">Ares Enyalius</h1>
 <h3 class="title">Muy pronto, tu website de historia en aresenyalius.es</h3>
+<p class="title">Gracias</p>
 
 <script src='js/stopExecutionOnTimeout.js'></script>
 <script src='js/prefixfree.min.js'></script>
